# oldFPSgame

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  StaticAnalyzer.cmake
src/: CMakeLists.txt  Pixel.hpp  main.cpp
